# 1st-image-judge

./: .gitignore  README.md  pyproject.toml
notebooks/: main.ipynb
